--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -14,7 +14,7 @@
       <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
-      <section calss="card" id="html-section"> 
+      <section class="card" id="html-section"> 
         <h2>HTML</h2>
         <ul>
           <li>The head element contains information about the webpage.</li>
@@ -38,7 +38,8 @@
       <section class="card" id="javascript-section"> 
         <h2> JavaScript</h2>
         <ul> 
-          <li> JavaScript notes to come soon</li>
+          <li> A variable is a named container that allows us to store data in our code.</li>
+          <li> Control flow is the order in which a computer executes code in a script</li>
         </ul>
       </section>
     </main>
